--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Приклад інформаційної системи для виконання завдань Навчальної обчислювальної практики",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "cd frontend && npm install && cd .. && cd backend && npm install"
   },
   "repository": {
     "type": "git",
