--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "cd frontend && npm install && cd .. && cd backend && npm install"
+    "install": "concurrently \"npm run installfrontend\" \"npm run installbackend\"",
+    "installfrontend": "cd frontend && npm install",
+    "installbackend": "cd backend && npm install"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Andrashko/practice/issues"
   },
-  "homepage": "https://github.com/Andrashko/practice#readme"
+  "homepage": "https://github.com/Andrashko/practice#readme",
+  "dependencies": {
+    "concurrently": "^7.2.2"
+  }
 }
